--- a/rolunk/index.html
+++ b/rolunk/index.html
@@ -131,7 +131,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 
 <div class="wp-block-columns is-layout-flex wp-container-core-columns-layout-2 wp-block-columns-is-layout-flex">
 <div class="wp-block-column is-layout-flow wp-block-column-is-layout-flow">
-<p style="font-size:1.9rem">Mit a terveink?</p>
+<p style="font-size:1.9rem">Mik a terveink?</p>
 
 
 
